[package]
name = "flerp_os"
version = "0.1.0"
edition = "2021"
default-run = "flerp_os"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[workspace]
members = ["kernel"]

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
