[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

# Comment out when testing
#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"
# up to this point

[dependencies]
bootloader_api = "0.11"
x86_64 = "0.14.12"
volatile = "0.2.6"
spin = "0.9.8"
uart_16550 = "0.3.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


